# pre-commit-tool-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pre-commit.yaml
pre_commit_hooks/: check_copyright.py  check_copyright_test.py  check_google_doc_style.py  check_google_doc_style_test.py  check_links.py  check_links_test.py  check_markdown_links.py  file_test_case.py  google_doc_style_data.py  markdown_links.py  markdown_links_test.py  markdown_toc.py  markdown_toc_test.py  test_utils.py
