# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This needs to be at the repo root for pre-commit. It will mainly reference
# tools in pre_commit_hooks/.

[metadata]
name = pre_commit_hooks

[options]
packages = find:
python_requires = >= 3.8.5
install_requires =
    commonmark>=0.9.1

[options.entry_points]
console_scripts =
    check-copyright = pre_commit_hooks.check_copyright:main
    check-google-doc-style = pre_commit_hooks.check_google_doc_style:main
    check-links = pre_commit_hooks.check_links:main
    markdown-toc = pre_commit_hooks.markdown_toc:main

[flake8]
max-line-length = 80

[mypy]
disallow_untyped_decorators = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = false
pretty = true
